src/share/vm/prims/jvmtiTagMap.cpp
@@ -1162,7 +1162,7 @@ static jint invoke_primitive_field_callback_for_static_fields
 
     // get offset and field value
     int offset = field->field_offset();
-    address addr = (address)k + offset;
+    address addr = (address)k->java_mirror() + offset;
     jvalue value;
     copy_to_jvalue(&value, addr, value_type);
 
